@@ -21,7 +21,7 @@
 // You should have received a copy of the GNU General Public License
 // along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-#include <Rcpp.h>
+#include <RcppClassic.h>
 #include <cmath>
 
 /* suncc needs help to disambiguate between sqrt( float ) and sqrt(double) */
