@@ -2,6 +2,9 @@
 
     o	Updated src/Makevars
     
+    o   Now depends also on RcppClassic so that we can keep continue to show
+        examples using the classic API
+    
 0.1.1   2010-07-29
 
     o	Minor update, no new examples or documentation added yet
